--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "chat!",
   "main": "index.js",
   "scripts": {
+    "server": "node server.js",
+    "build": "browserify main.js -o public/bundle.js",
+    "watch": "watchify main.js -o public/bundle.js -v -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
