--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/phoenix-scitent/sci-chat#readme",
   "dependencies": {
+    "ecstatic": "^2.1.0",
     "end-of-stream": "^1.1.0",
-    "exstatic": "^0.3.2",
     "flexboxgrid": "^6.3.1",
     "main-loop": "^3.4.0",
     "split2": "^2.1.0",
