--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node server.js",
     "build": "browserify main.js -o public/bundle.js",
-    "watch": "watchify main.js -o public/bundle.js -v -d",
+    "watch": "watchify -t browserify-css main.js -o public/bundle.js -v -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/phoenix-scitent/sci-chat#readme",
   "dependencies": {
+    "browserify-css": "^0.9.2",
     "ecstatic": "^2.1.0",
     "end-of-stream": "^1.1.0",
     "flexboxgrid": "^6.3.1",
+    "locus": "^1.2.0",
     "main-loop": "^3.4.0",
+    "medium-editor": "^5.22.1",
+    "snabbdom": "^0.5.3",
     "split2": "^2.1.0",
     "through2": "^2.0.1",
     "virtual-dom": "^2.1.1",
