--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/phoenix-scitent/sci-chat#readme",
   "dependencies": {
+    "browserify": "^13.1.0",
     "browserify-css": "^0.9.2",
     "ecstatic": "^2.1.0",
     "end-of-stream": "^1.1.0",
