--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "node server.js",
-    "build": "browserify main.js -o public/bundle.js",
-    "watch": "watchify -t browserify-css main.js -o public/bundle.js -v -d",
+    "build": "browserify client.js -o public/bundle.js",
+    "watch": "watchify -t browserify-css client.js -o public/bundle.js -v -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
