--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "ecstatic": "^2.1.0",
     "end-of-stream": "^1.1.0",
     "flexboxgrid": "^6.3.1",
+    "leveldown": "^1.5.0",
+    "levelup": "^1.3.3",
     "locus": "^1.2.0",
     "main-loop": "^3.4.0",
     "medium-editor": "^5.22.1",
